crates/clinker-exec/tests/snapshots/pre_lift_baselines__explain_composition_pipeline.snap
---
source: crates/clinker-exec/tests/pre_lift_baselines.rs
expression: scrubbed
---
=== Execution Plan ===

Mode: Streaming
Indices to build: 0
Transforms: 0
Output projections: 1
DAG nodes: 5
arbitration: BackPressurePreferred -> Priority (pause at 0.80·limit, resume below 0.70·limit)

Source DAG:
  Tier 0: customers_src, addresses_src

=== Physical Properties ===

source.addresses_src:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=0B, predicted_freed=0B, predicted_subtree_reclaim=0B

composition.addr_norm:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B, predicted_subtree_reclaim=0B

source.customers_src:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=0B, predicted_freed=0B, predicted_subtree_reclaim=0B

composition.enrich1:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B, predicted_subtree_reclaim=0B

sink.enriched_out:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B, predicted_subtree_reclaim=0B

=== Buffer Edges ===

edge source.addresses_src -> composition.addr_norm:
  buffer: node_buffer (slot=1)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: source)

edge source.addresses_src -> composition.enrich1:
  buffer: node_buffer (slot=1)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: source)

edge source.customers_src -> composition.enrich1:
  buffer: node_buffer (slot=0)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: source)

edge composition.enrich1 -> sink.enriched_out:
  buffer: node_buffer (slot=2)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: composition)

=== CXL Expressions ===

=== Type Annotations ===


=== Memory Budget ===

Memory limit: default
Worker threads: 4

=== DAG Topology ===

  ● [source] addresses_src (line:15)
  │ [composition:body=<ID>] addr_norm (line:38)
  ● [source] customers_src (line:5)
  │ [composition:body=<ID>] enrich1 (line:27)
  │ [sink] enriched_out (line:47)
